--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -20,8 +20,8 @@
             <p *ngIf="storePhone.errors?.minlength">לפחות 9 תווים נדרשים</p>
             <input type='string' name=Address required #myaddres="ngModel" [(ngModel)]="registermodel.Address" placeholder='כתובת' class='input-line full-width'/>
             <p class="alert" *ngIf="!myaddres.valid && myaddres.touched">!שדה חובה</p>
-            <input type='string' name=City required #mycity="ngModel" [(ngModel)]="registermodel.City" placeholder='כתובת' class='input-line full-width'/>
-            <p class="alert" *ngIf="!myaddres.valid && myaddres.touched">!שדה חובה</p>
+            <input type='string' name=City required #mycity="ngModel" [(ngModel)]="registermodel.City" placeholder='עיר' class='input-line full-width'/>
+            <p class="alert" *ngIf="!mycity.valid && mycity.touched">!שדה חובה</p>
             <input type='email' pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" 
             name=Email required #myemail="ngModel" [(ngModel)]="registermodel.Email" placeholder='מייל' class='input-line full-width'/>
             <p class="alert" *ngIf="!myemail.valid && myemail.touched">!שדה חובה</p>
