forum without design

--- a/src/app/components/forum/forum.component.html
+++ b/src/app/components/forum/forum.component.html
@@ -1,1 +1,30 @@
-<p>forum works!</p>
+<div class="" dir="rtl">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 col-lg-3">
+                <button class="btnNewSubject" (click)="newSubjectOrPost('subject')">נושא חדש</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-lg-3">
+                <app-list-of   [changeCurrentIdFromChild]="enableChangeId" [nameOfController]="nameOfController" [nameOfFunction]="nameOfFunction"></app-list-of>
+            </div>
+            <div class="col-md-9 col-lg-9">
+                <app-subject-details  [newSubjectOrPost]="enableOpenPost" [chooserId]="chooserId"></app-subject-details>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- //פתיחת נושא חדש -->
+<div *ngIf="openWritePost">
+    <app-set-post-and-subject [GetCurrentId]="enableGetCurrentId" [SetSetToClose]="enableClosePost"  [subjectOrPost]="subjectOrPost"></app-set-post-and-subject>
+</div>
+<!-- //סיום פתיחת נושא חדש -->
+<!-- (onChangeSubject)="subject.getListOfPostById($event)" -->
+<!-- 
+          
+          
+        </div>
+    </div> -->
+
