--- a/src/app/components/list-of/list-of.component.scss
+++ b/src/app/components/list-of/list-of.component.scss
@@ -1,104 +1,19 @@
-/*** FONTS ***/
-@import url(https://fonts.googleapis.com/css?family=Montserrat:900|Raleway:400,400i,700,700i);
-
-
-
-/*** VARIABLES ***/
-/* Colors */
-$black: #201d1f;
-$blue: #cc8eb9;
-$green: #b31d4f;
-$yellow: #8f148f;
-$white: #ffff;
-
-
-
-/*** EXTEND ***/
-/* box-shadow */
-%boxshadow {
-  box-shadow: 0.25rem 0.25rem 0.6rem rgba(0,0,0,0.05), 0 0.5rem 1.125rem rgba(75,0,0,0.05);
+.btn {
+  background-color: #270B36;;
+  padding: 20px 0;
+  text-align: center;
+  width: auto;
+  height: 75px;
+  font-style: oblique;
+  color: #ecf0f1;
+  font-size: 20px;color: #ecf0f1;
+  padding: 20px 8px;
+  // text-decoration: none;
 }
 
-
-
-/*** STYLE ***/
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
+.btn:hover {
+  background: darkred;
+  border:2px solid #4D0D35;
+  color: dimgrey;
+  
 }
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  background-color: $white;
-  color: $black;
-  font-family: 'Raleway', sans-serif;
-}
-
-main {
-  display: block;
-//   margin: 0 auto;
-  max-width: 10rem;
-  padding: 1rem;
-}
-
-
-ol.gradient-list {
-  counter-reset: gradient-counter;
-  list-style: none;
-  margin: 1.75rem 0;
-  padding-left: 1rem;
-  > li {
-    background: white;
-    border-radius: 0 0.5rem 0.5rem 0.5rem;
-    @extend %boxshadow;
-    counter-increment: counter;
-    margin-top: 1rem;
-    min-height: 3rem;
-    padding: 1rem 1rem 1rem 3rem;
-    position: relative;
-    &::before,
-    &::after {
-      background: linear-gradient(135deg, $blue 0%,$green 100%);
-      border-radius: 1rem 1rem 0 1rem;
-      content: '';
-      height: 3rem;
-      left: -1rem;
-      overflow: hidden;
-      position: absolute;
-      top: -1rem;
-      width: 3rem;
-    }
-    &::before {
-      align-items: flex-end;
-      @extend %boxshadow;
-      content: counter(counter);
-      color: $black;
-      display: flex;
-      font: 900 1.5em/1 'Montserrat';
-      justify-content: flex-end;
-      padding: 0.125em 0.25em;
-      z-index: 1;
-    }
-    // @for $i from 1 through 5 {
-    //   &:nth-child(10n+#{$i}):before {
-    //     background: linear-gradient(135deg, rgba($green, $i * 0.2) 0%,rgba($yellow, $i * 0.2) 100%);
-    //   }
-    // }
-    // @for $i from 6 through 10 {
-    //   &:nth-child(10n+#{$i}):before {
-    //     background: linear-gradient(135deg, rgba($green, 1 - (($i - 5) * 0.2)) 0%,rgba($yellow, 1 - (($i - 5) * 0.2)) 100%);
-    //   }
-    // }
-    + li {
-      margin-top: 2rem;
-    }
-  }
-}
-
-
