--- a/src/app/components/find-cloth-application/find-cloth-application.component.scss
+++ b/src/app/components/find-cloth-application/find-cloth-application.component.scss
@@ -111,8 +111,8 @@ body {
    border-radius: 50%;
    background: #2f3640;
    display: flex;
-   justify-content: center;
-   align-items: center;
+  //  justify-content: center;
+  //  align-items: center;
    transition: 0.4s;
 }
 
