--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,8 +1,8 @@
-<p>home-page works!</p>
+
 <div class="container">
     <div class="row">
         <div class="col-md-offset-1 col-md-7">
-            <!-- <img src="../../assets/images/1111.jpg"> -->
+            <img src="../../assets/images/1111.jpg">
             <h1>nbnbnbnbnbnbnbn</h1>
         </div>
     </div>
