yeudiy login-outworking

--- a/src/app/components/my-inventory/my-inventory.component.html
+++ b/src/app/components/my-inventory/my-inventory.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-3" name="textForButton"><button class="button"  [(ngModel)]="textForButton" (click)="ButtonClick()">{{textForButton}}</button></div>
+    <div class="col-md-3" name="textForButton"><button id="btn1" class="button" (click)="ButtonClick()">{{textForButton}}</button></div>
   </div>
   <div class="row">
     <div class="col-md-2"><input type="date" [(ngModel)]="RangeForSearchDate1" name="RangeForSearchDate1"> </div>
