--- a/src/app/components/my-inventory/my-inventory.component.scss
+++ b/src/app/components/my-inventory/my-inventory.component.scss
@@ -55,7 +55,7 @@ html, body {
 //   justify-content: center;
 // }
 
-.button {
+#btn1 {
   min-width: 200px;
   min-height: 40px;
   font-family: 'Nunito', sans-serif;
@@ -76,7 +76,7 @@ background: linear-gradient(90deg, rgb(230, 129, 163) 0%, rgb(163, 38, 69) 100%)
   padding: 10px;
   }
 
-button::before {
+  #btn1::before {
 content: '';
   border-radius: 1000px;
   min-width: calc(300px + 12px);
@@ -91,16 +91,16 @@ content: '';
   transition: all .3s ease-in-out 0s;
 }
 
-.button:hover, .button:focus {
+#btn1:hover, #btn1:focus {
   color: #313133;
   transform: translateY(-6px);
 }
 
-button:hover::before, button:focus::before {
+#btn1:hover::before, #btn1:focus::before {
   opacity: 1;
 }
 
-button::after {
+#btn1::after {
   content: '';
   width: 30px; height: 30px;
   border-radius: 100%;
@@ -113,7 +113,7 @@ button::after {
   animation: ring 1.5s infinite;
 }
 
-button:hover::after, button:focus::after {
+#btn1:hover::after, #btn1:focus::after {
   animation: none;
   display: none;
 }
