forum ready without addvotes

--- a/src/app/components/list-of/list-of.component.scss
+++ b/src/app/components/list-of/list-of.component.scss
@@ -1,3 +1,7 @@
+
+body { height: 100%; 
+  background-color:black !important ;
+color: coral!important;}
 .btn {
   background-color: #270B36;;
   padding: 20px 0;
