--- a/src/app/components/list-of/list-of.component.scss
+++ b/src/app/components/list-of/list-of.component.scss
@@ -21,3 +21,13 @@ color: coral!important;}
   color: dimgrey;
   
 }
+.list {
+	position: absolute;
+    left: 0;
+	top: 30px;
+	width: 250px;
+	
+}
+.tr{
+	border:#4D0D35 3px solid ;
+}
