--- a/src/app/components/economic-articles/economic-articles.component.html
+++ b/src/app/components/economic-articles/economic-articles.component.html
@@ -1,10 +1,9 @@
-<p>economy works!</p>
-<div class="container">
+<div *ngIf="head" class="container">
 	<div class="row">
 		<div class="col-md-1">
 
-		 <app-list-of></app-list-of>
-			
+			<app-list-of></app-list-of>
+
 		</div>
 		<div class="col-md-11">
 			<ul class="tilesWrap">
@@ -50,3 +49,6 @@
 		</div>
 	</div>
 </div>
+
+
+
