--- a/src/app/components/my-inventory/my-inventory.component.scss
+++ b/src/app/components/my-inventory/my-inventory.component.scss
@@ -4,6 +4,61 @@ body {
     direction:rtl;
 
   }
+  //**------------table
+  .container2 {
+    position: absolute;
+    text-align: right;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 10px;
+    right: 5px;
+    left:720px;
+  }
+  
+  .responsive-table {
+    margin-top: 40px;
+    li {
+      border-radius: 3px;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 25px;
+    }
+    .table-header {
+      background-color: #e71a1ac4;
+      font-size: 14px;
+      text-transform: uppercase;
+      letter-spacing: 0.03em;
+    }
+    .table-row {
+      background-color: #ffffff;
+      box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+    }
+    .col-1 {
+      flex-basis: 10%;
+    }
+    .col-2 {
+      flex-basis: 10%;
+    }
+    .col-3 {
+      flex-basis: 10%;
+    }
+    .col-4 {
+      flex-basis: 10%;
+    }
+    .col-5 {
+        flex-basis: 10%;
+      }
+    .col-6 {
+        flex-basis: 10%;
+      }
+      .col-7 {
+        flex-basis: 1%;
+      }
+    
+}
+//**----------------------
   #myDate{
     display: inline;
   }
@@ -48,13 +103,6 @@ html, body {
   height: 100%;
 }
 
-// .wrap {
-//   height: 100%;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
-
 #btn1 {
   min-width: 200px;
   min-height: 40px;
@@ -65,7 +113,7 @@ html, body {
   font-weight: 700;
   color: #313133;
   background: #c2254c;
-background: linear-gradient(90deg, rgb(230, 129, 163) 0%, rgb(163, 38, 69) 100%);
+  background: linear-gradient(90deg, rgb(230, 129, 163) 0%, rgb(163, 38, 69) 100%);
   border: none;
   border-radius: 1000px;
   box-shadow: 12px 12px 24px rgba(209, 15, 15, 0.64);
