--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-offset-1 col-md-7">
-            <img src="../../assets/images/1111.jpg">
+            <img src="C:\Users\מוזסון\Desktop\Angular\store-angular\src\assets\images\WIN_20200505_21_08_25_Pro.jpg">
             <h1>nbnbnbnbnbnbnbn</h1>
         </div>
     </div>
