simple find cloth working:)

--- a/src/app/components/economic-articles/economic-articles.component.html
+++ b/src/app/components/economic-articles/economic-articles.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="opened>=0">
-	<img [src]="path()" alt="מאמר" style="width: 200px;height: 500px; ">
+	<img [src]="path()"  width="242" height="363" alt="מאמר" >
 </div>
 
 <div *ngIf="head" class="container">
@@ -20,7 +20,7 @@
 					<button (click)="read(i)">לקריאת המאמר</button>
 				</li>
 				 
-			</ul>
+			</ul> 
 		</div>
 	</div>
 </div>
