--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,14 +4,14 @@
     <div class='window'>
       <div class='overlay'></div>
       <div class='content'>
-        <div class='welcome'>Hello There!</div>
-        <div class='subtitle'>We're almost done. Before using our services you need to create an account.</div>
+        <div class='welcome'>ברוכים הבאים!</div>
+        <div class='subtitle'>האתר לחנויות קטנות</div>
         <a routerLink="/register-component" routerLinkActive="active">עדיין לא רשום? הרשם כאן</a>     
          <p  *ngIf="tryToSubmit&&!loginForm.valid" class="alert">לא ניתן לשלוח כל עוד הטופס לא תקין!</p>
         <div class='input-fields'>
           <input type='email' pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" name=Email required
             #myemail="ngModel" [(ngModel)]="loginmodel.Email" placeholder='מייל' class='input-line full-width' />
-          <p class="alert" *ngIf="!myemail.valid && myemail.touched">The email is required</p>
+          <p class="alert" *ngIf="!myemail.valid && myemail.touched">שדה חובה</p>
           <div *ngIf="myemail.hasError('pattern')">Email format should be <small><b>joe@abc.com</b></small></div>
           <p *ngIf="noUser">אין כזה משתמש</p>
           <input type='password' name=PasswordUser required minlength="6" #mypassword="ngModel"
