--- a/src/app/components/economic-articles/economic-articles.component.scss
+++ b/src/app/components/economic-articles/economic-articles.component.scss
@@ -125,7 +125,11 @@ background: linear-gradient(to right, #ffc500, #c21500);
 background: -webkit-linear-gradient(to right, #0ABFBC, #FC354C);
 background: linear-gradient(to right, #0ABFBC, #FC354C);
 }
-
+.cover {
+	object-fit: cover;
+	width: 50px;
+	height: 100px;
+  }
 
 
 
