--- a/src/app/components/find-cloth-application/find-cloth-application.component.scss
+++ b/src/app/components/find-cloth-application/find-cloth-application.component.scss
@@ -1,4 +1,6 @@
-
+body{
+  direction:rtl;
+}
 .container {
   max-width: 1000px;
   margin-left: auto;
@@ -35,10 +37,10 @@ h2 {
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
   }
   .col-1 {
-    flex-basis: 10%;
+    flex-basis: 25%;
   }
   .col-2 {
-    flex-basis: 40%;
+    flex-basis: 25%;
   }
   .col-3 {
     flex-basis: 25%;
