--- a/src/app/components/inventory/inventory.component.scss
+++ b/src/app/components/inventory/inventory.component.scss
@@ -12,10 +12,10 @@
     z-index:2;
     text-align: right;
     max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 10px;
-    padding-right: 10px;
+    // margin-left: auto;
+    // margin-right: auto;
+    // padding-left: 10px;
+    // padding-right: 10px;
   }
   
   .responsive-table {
