--- a/src/app/components/my-inventory/my-inventory.component.scss
+++ b/src/app/components/my-inventory/my-inventory.component.scss
@@ -15,7 +15,6 @@ body {
     right: 5px;
     left:720px;
   }
-  
   .responsive-table {
     margin-top: 40px;
     li {
@@ -181,11 +180,10 @@ content: '';
 
 //----------------
   .file-upload-input {
-    position: absolute;
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
+    width: 25px;
+    height: 10px;
     outline: none;
     opacity: 0;
     cursor: pointer;
