--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -5,9 +5,14 @@ html {
   height: 100%;
   direction: rtl;
 }
-
+.alert{
+  direction: rtl;
+padding: 0px;
+color: black;
+}
 input {
   border: none;
+  direction: rtl;
 }
 
 button:focus {
@@ -25,7 +30,7 @@ button:focus {
 .highlight {
   color: rgba(255, 255, 255, 0.8);
   font-weight: 400;
-  cursor: pointer;
+  cursor:pointer;
   transition: color .2s ease;
 }
 
@@ -42,7 +47,7 @@ button:focus {
   height: 120px;
   font-weight: 300;
   text-align: center;
-  margin-top: 5px;
+  margin-top: 3px;
   color: rgba(255, 255, 255, 0.65)
 }
 
@@ -183,7 +188,7 @@ button:focus {
   background: linear-gradient(#8CA6DB, #B993D6);
   opacity: 0.85;
   filter: alpha(opacity=85);
-  height: 1000px;
+  height: 1100px;
   position: absolute;
   width: 360px;
   z-index: 1;
@@ -215,5 +220,5 @@ button:focus {
 }
 
 .ng-invalid.ng-touched:not(form)  {
-  border-bottom: 1px solid red;
+  border: 1px solid black;
 }
