--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -9,6 +9,25 @@
     <div class="row">
         <div class="col-md-4 col-lg-4">
             <!-- <img src="../../assets/images/1111.jpg"> -->
+            בס"ד
+התחרות טובה לצרכן – אם כי לא  לבעלי העסקים הקטנים.
+בעייתם של בעלי העסקים הקטנים  - קשה עד למאוד - בעמידתם בשוק לצד רשתות הענק, בעלות הסניפים הרבים, הן עומדות חסרות אונים ללא יכולת התמודדות במתחרה הרשתית.
+דרישת הצרכן היא תמחור זול, והצע של מבחר דגמים ומידות.
+ככל שהרשת גדולה יותר היא בעלת יכולות רחבות יותר להיענות לדרישות הצרכן, ולספק לו את מבוקשו. הרשת הגדולה היא בעלת פוטנציאל גבוה ביותר למשיכת הקונים. 
+ע"י הוזלת מחירים משמעותית שמתאפשרת במכירת כמות גדולה יותר של פריטים וכן, ע"י הצע רב יותר של דגמים ומידות המתאפשר לה בעקבות אפשרות העברת המלאי בין הסניפים הרבים (שאגב גם מחליפה את החובה באחסון 'מלאי מלא' בכל סניף, מה שמפחית בצורה ניכרת את ההפסדים ממלאי עודף עד בכלל).
+אכן, כאשר עסק קטן מתמודד מול רשתות גדולות הוא מאבד את היכולת לפרוח, וכיום מועמדת החנות הפרטית, בתחתית הסולם העסקי, הכלכלי.
+לכן באנו אנו עם רעיון גדול זה במטרה להעצים, לחזק ולהרים את החנויות הפרטיות לדרגת רשת- חיבור העסקים הקטנים לרשת אחת גדולה- סניפים רבים תחת קורת גג אחת – stores.
+התוכנה תכיל ממשקים שונים עבור הרשאות שונות
+•	ממשקים לבעלי חברה – בעלי חברות יוכלו להכנס למלאי הפרטי שלהם בלבד, לצפות בו
+(לפי שנה, עונות וכו'), להוסיף לו, ולעדכנו.  שאר דפי האתר יהיו חסומים להם.
+: • ממשקים לבעלי עסקים– בעל עסק יוכל לקרוא במאמרים כלכליים נכונים וחשובים לו,
+הוא יוכל לעדכן את המלאי האישי בשתי אפשרויות-
+ע"י העלאת חשבוניות פרטיות לאתר, ועדכון אוטומטי של הנתונים במלאי הפרטי ע"י האתר.
+או עדכון ידני – סימון שורות פריטים מרשימת המלאי הכללית של כל החברות. 
+הוא יוכל לחפש פריט שחסר לו במאגר המלאי הכללי של כלל ה'סניפים' ביישום החיפוש באתר- המערכת תחזיר לו רשימת חנויות בעלות הפריט המסוים שחיפש, ממוינות לפי קרבה למיקומו הגיאוגרפי.
+בפורום - הוא יוכל לשתף את עמיתיו ל'רשת' בשאלות שעל הפרק, תשובות, רעיונות, ידע וניסיון מה שכאמור יקדם אותו/ עמיתו מאד. 
+
+
             <app-list-of></app-list-of>
         </div>
     </div>
