--- a/src/app/components/forum/forum.component.scss
+++ b/src/app/components/forum/forum.component.scss
@@ -17,3 +17,11 @@
     color: dimgrey;
     
 }
+app-set-post-and-subject .card .textarea {
+  resize: none;
+  width: 100%;
+}
+.set{
+height: 700px;    
+display: flex;
+width: 100%; }
