--- a/src/app/components/set-post-and-subject/set-post-and-subject.component.html
+++ b/src/app/components/set-post-and-subject/set-post-and-subject.component.html
@@ -1,31 +1,28 @@
-<div class="container" id="" class="card card1">
-            <input  #SubjectOrPostName  type="text" tabindex="1" id="subjectpostName"
-                [placeholder]="titleSet" value="">
-    <div class="row" id="">
-
-        <div class="col-md-2 col-lg-2">
-            <input type="button" (click)="B()" value="B">
-        </div>
-        <div class="col-md-2 col-lg-2">
-            <input type="button" (click)="I()" value="I">
-        </div>
-        <div class="col-md-2 col-lg-2">
+<div class="container" id="" class="card">
+          
+    <div class="row" >
+ 
+        <!-- <div class = "buttonsforfrom" class="col-md-6 col-lg-6"> -->
+          <span class="col-md-3 col-lg-3" style = "background-color: #f8a8a8">
             <input type="checkbox" #wantUpdate id="vehicle1" name="IfWantUpdate" >
             <p >{{wanttoUpdate}}</p>
-        </div>
-        <div class=" col-md-3 col-lg-3"*ngIf="subjectOrPost=='subject'">
-            <input type="button" (click)="submitSubject(SubjectOrPostName.value,wantUpdate.checked,Content.value)" value="שלח">
-        </div>
-        <div class=" col-md-3 col-lg-3"*ngIf="subjectOrPost=='post'">
-            <input type="button" (click)="submitPost(SubjectOrPostName.value,wantUpdate.checked,Content.value)" value="שלח">
-        </div>
-        <div class="col-md-3 col-lg-3">
-            <input type="button" (click)="cancel()" value="בטל">
-        </div>
+            <input type="button" class = "second" (click)="cancel()" value="בטל">
+        <!-- <div *ngIf="subjectOrPost=='subject'" > -->
+            <input type="button"  *ngIf="subjectOrPost=='subject'" class = "second" (click)="submitSubject(SubjectOrPostName.value,wantUpdate.checked,Content.value)" value="שלח">
+        <!-- </div> -->
+        <!-- <div *ngIf="subjectOrPost=='post'" > -->
+            <input type="button"  *ngIf="subjectOrPost=='post'"  class = "second" (click)="submitPost(SubjectOrPostName.value,wantUpdate.checked,Content.value)" value="שלח">
+        <!-- </div> -->
+        <div forname = "SubjectOrPostName">
+        <input name ="SubjectOrPostName" #SubjectOrPostName value = "SubjectOrPostName" placeholder=" nbnbnb">
     </div>
-    <div class="row">
-        <div class="col-md-6 col-lg-6">
-            <textarea #Content class="write" tabindex="4" dir="rtl"></textarea>
-        </div>
+          </span>
+       
     </div>
    
+    <div class="row">
+        <span class="col-md-6 col-lg-6">
+            <textarea #Content rows="12"  tabindex="4" dir="rtl"></textarea>
+        </span>
+    </div>
+</div>
