--- a/src/app/components/set-post-and-subject/set-post-and-subject.component.scss
+++ b/src/app/components/set-post-and-subject/set-post-and-subject.component.scss
@@ -1,15 +1,24 @@
+body{
+ 
+}
+app-set-post-and-subject { float:left;width:100%;padding:5px;background:#ccc;}
+      html, body {margin:0px; }
+.row {width: 100%;}
 .card {
+  
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 50%;
     text-align: right;
-
-   }
-   .card1{
     position:fixed;
     bottom: 0;
     z-index: 1;
+    
+    
     }
+  //   app-set-post-and-subject .card .textarea {
+  //     resize: none;
+  //     width: 100%;
+  // }
   
   .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -20,55 +29,29 @@
   }
   .contentOfTheMessage {
     transition: 0.1s;
-    width: 700px;
     text-align: right;      
     border-radius: 10px;
-    border: 2px solid rgb(223, 219, 219);;
+    border: 2px solid #f8a8a8;;
     padding: 20px;
 
   }
-  li
-  {
-    padding-top: 4px;;
-      width: 100%;
-  }
-  .left
-  { 
-    top: 68.1395%;
-    visibility: visible;
-    height:200px;
-    width: 70%;
-    box-shadow: inset 0 4px 4px rgba(0,0,0,.05);
-    background-color: rgb(221, 217, 217);
-    
-  }
-  .write{ height:300px;
-    width: 100%;
-  }
+ 
+
+  .contentOfTheMessage{ height:300px;}
+  
+  
   #btnSubmit
   {
    width: 200px;
   }
-  .title form-control
-  {
-text-rendering: auto;
-color: -internal-light-dark-color(black, white);
-letter-spacing: normal;
-word-spacing: normal;
-text-transform: none;
-text-indent: 0px;
-text-shadow: none;
-display: inline-block;
-text-align: start;
--webkit-appearance: textfield;
-background-color: -internal-light-dark-color(rgb(255, 255, 255), rgb(59, 59, 59));
--webkit-rtl-ordering: logical;
-cursor: text;
-margin: 0em;
-font: 400 13.3333px Arial;
-padding: 1px 2px;
-border-width: 2px;
-border-style: inset;
-border-color: -internal-light-dark-color(rgb(118, 118, 118), rgb(195, 195, 195));
-border-image: initial;
+ 
+.second {border-radius: 8px;
+background-color: rgb(243, 185, 179);}
+.second {
+  transition-duration: 0.4s;
+}
+
+.second:hover {
+  background-color:rgb(250, 231, 228); /* Green */
+  color: rgba(223, 51, 51, 0.432);
 }
