--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -11,17 +11,20 @@
           <!-- </div>
         </div> -->
         <ul>
-          <li><a routerLink="/home-page-component" routerLinkActive="active">דף הבית</a></li>
-          <li><a routerLink="/find-cloth-application-component" routerLinkActive="active">יישום </a></li>
+          <!-- <li><a routerLink="/home-page-component" routerLinkActive="active">דף הבית</a></li>
           <li><a routerLink="/economic-articles-component" routerLinkActive="active">מאמרים כלכליים</a></li>
           <li><a routerLink="/forum-component" routerLinkActive="active">פורום</a></li>
           <li><a routerLink="/my-inventory" routerLinkActive="active">המלאי שלך</a></li>
+          <li><a routerLink="/find-cloth-application-component" routerLinkActive="active">יישום </a></li>
+          <li><a routerLink="/company-items-component" routerLinkActive="active"> המלאי שלך לחברה</a></li> -->
+
           <li *ngIf="!isLogged" class="btn"><a routerLink="/login-component" routerLinkActive="active">Log In</a></li>
           <li *ngIf="isLogged" class="btn"><a routerLink="/private-area-component" routerLinkActive="active">אזור אישי</a></li>
           <li *ngIf="!isLogged" class="btn sign-up"><a routerLink="/register-component" routerLinkActive="active">Sign Up</a></li>
           <li *ngIf="isLogged" class="btn sign-up" (click)="LogOut()">Logout</li>
-
+          
         </ul>
       </nav>
     <!-- </div> -->
   </header>
+  <app-second-top-menu></app-second-top-menu>
